# cleaner_folder_download

./: LICENSE  README.md  cleaner_folder_download.py  file_utilities.py  pyproject.toml  requirements.txt
contrib/: env-sample.txt
env-sample/: env-sample.txt
project-cleaner-download/: file_utilities.py  pytest.ini  requirements.txt
tests/: test_cleaner_folder_download.py
videos/: Screencast from 20-11-2023 08:24:57.webm
